@@ -55,9 +55,9 @@ _G.LSOL_VARIANTS = {
 	Assembly = {file='assembly.lua', cc=1},
 	Australian = {file='australian.lua', cc=4},
 	['Baker\'s Dozen'] = {file='bakers.lua', cc=1},
-	['Baker\'s Dozen (Wide)'] = {file='bakers.lua', wide=true, cc=1},
+	['Baker\'s Dozen (Wide)'] = {file='bakers.lua', wide=true, cc=1, statsName='Baker\'s Dozen'},
 	['Beleaguered Castle'] = {file='castle.lua', cc=1},
-	['Flat Castle'] = {file='castle.lua', cc=1, flat=true},
+	['Flat Castle'] = {file='castle.lua', cc=1, flat=true, statsName='Beleaguered Castle'},
 	Bisley = {file='bisley.lua', cc=4},
 	['Black Hole'] = {file='blackhole.lua', cc=1},
 	Blockade = {file='blockade.lua', cc=4},
