@@ -31,6 +31,7 @@ end
 -- use Pile.collect
 
 function Reserve:unsortedPairs()
+	-- they're all unsorted, even if they aren't
 	if #self.cards == 0 then
 		return 0
 	end
